--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 requires-python = ">=3.10,<3.14"
 dependencies = [
   'torch>=2.6; python_version >= "3.13"',
-  "torch>=2.2.2,<2.6; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.12'",
-  "torch>=2.2.2; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.12'",
-  "torch>=2.2.2; sys_platform == 'linux' and python_version < '3.12'",
-  "torch>=2.2.2; sys_platform == 'win32' and python_version < '3.12'",
+  "torch>=2.2.2,<2.6; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13' and python_version >= '3.10'",
+  "torch>=2.2.2; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.13' and python_version >= '3.10'",
+  "torch>=2.2.2; sys_platform == 'linux' and python_version < '3.13' and python_version >= '3.10'",
+  "torch>=2.2.2; sys_platform == 'win32' and python_version < '3.13' and python_version >= '3.10'",
 
   "tensorflow>=2.16.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
   "tensorflow>=2.18.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
@@ -28,6 +28,7 @@ dependencies = [
   "pandas>=2.2.1",
   "pip>=25.0.1",
   "pytest>=8.3.5",
+  "importlib-metadata>=6.5"
 ]
 
 [tool.uv.sources]
